@@ -1,15 +1,47 @@
+
+    plugins {
+        id "com.android.application" version "8.2.0"
+        id "org.jetbrains.kotlin.android" version "1.9.10"
+        id "com.google.dagger.hilt.android" version "2.50"
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 buildscript {
     ext {
         kotlin_version = '1.9.10'
         compose_ui_version = '1.6.1'
     }
-    repositories {
-        google()
-        mavenCentral()
-    }
     dependencies {
         classpath "com.android.tools.build:gradle:8.2.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.50"
+    }
+}
+
+allprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "17"
+            freeCompilerArgs += [
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+            ]
+        }
     }
 }
